Laço de repetição (while)

--- a/while/fibonacci.html
+++ b/while/fibonacci.html
@@ -22,11 +22,9 @@
             proximo = a + b;
             a = b;
             b = proximo;
-
             i++;
         }
-
-        console.log(resultado);
+        alert(resultado);
     </script>
 </body>
 
