--- a/while/calculadora.html
+++ b/while/calculadora.html
@@ -44,13 +44,9 @@
                 alert(n1 % n2)
                 break;
             }
-            break;
+            condicao = prompt("Deseja realizar outra operação? Digite S para sim ou N para não:");
         }
-        condicao = prompt("Digite S para realizar outra operação ou N para encerrar")
-
-        while (condicao == "N" || condicao == "n") {
-            break;
-        }
+        alert("Calculadora encerrada.");
 
     </script>
 </body>
